NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');
NOTE: If you submit a pull request, please update this file with what you changed


11042013 -> jonnyboy -> updated patchDB to handle errors and ignore certain errors
11032013 -> jonnyboy -> added some of the changes presented by niel
                        added option to set update releases threads when using tablepergroup
                        hopefully a fix for postdate, error found by tuxeh
                        added more regexes and groups to release cleaner
                        added missing lines to schema
                        added some indexes, added to the trigger, both to improve query performance, once I'm done going through the queries, some indexes will be removed
                        you may need to run the patch manually if something fails, the patch may not work with pgsql. I will try to set up a vm for pgsql to test the schema and all queries.
10252013 -> jonnyboy -> changed renametopre.php to use releaseCleaner before added regexes
10242013 -> jonnyboy -> begin importing nntpproxy by greenbender
10212013 -> jonnyboy -> begin - adding option to use table per group
10192013 -> jonnyboy -> added dry run option to clean_nzbs.php
                        begin using threaded fixreleasenames in tmux
                        changed monitor newest release to newest release posted, not newest release added
                        updated threaded scripts to process all of -1 before processing any -2
                        removed part repair threaded, it was slower than non threaded
                        removed nzb-import-bulk.php, it does not function properly with duplicates and pdo
                        added changes to part repair by Whitelighter
10162013 -> jonnyboy -> created new table for safe scripts
                        improved output for check_usenet_groups.php
                        changed guid creation to improve speed