@@ -5,7 +5,7 @@ CREATE TABLE `predb`
 (
 `ID` INT(11) UNSIGNED NOT NULL AUTO_INCREMENT,
 `title` VARCHAR(255) NOT NULL DEFAULT '',
-`nfo` VARCHAR(500) NULL,
+`nfo` VARCHAR(255) NULL,
 `size` VARCHAR(50) NULL,
 `category` VARCHAR(255) NULL,
 `predate` DATETIME DEFAULT NULL,
